<resources>
    <string name="app_name">智慧采砂</string>
    <string name="hint_user_name">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="remember_me">记住我</string>
    <string name="login">登录</string>
    <string name="statistics">统计</string>
    <string name="query">查询</string>
    <string name="statistics_query">统计查询</string>
    <string name="site">站点</string>
    <string name="site_statistics">站点统计</string>
    <string name="select_site">请选择站点</string>
    <string name="company">单位</string>
    <string name="company_statistics">单位统计</string>
    <string name="select_company">请选择单位</string>
    <string name="balance_query">余额查询</string>
    <string name="balance_query_hint">输入单位名称/电话搜索</string>
    <string name="cheng_zhong_statistics">称重统计</string>
    <string name="year_trends">近一年趋势</string>
    <string name="total_car">总车数</string>
    <string name="total_car_colon">总车数：</string>
    <string name="total_weight">总重量</string>
    <string name="total_weight_colon">总重量：</string>
    <string name="total_money">总金额</string>
    <string name="total_money_colon">总金额：</string>
    <string name="balance">余额</string>
    <string name="balance_colon">余额：</string>
    <string name="czrj_balance_colon">称重软件余额：</string>
    <string name="hesha">河沙：</string>
    <string name="shashi">砂石：</string>
    <string name="feisha">废沙：</string>
    <string name="other">其它：</string>
    <string name="start_time">开始时间</string>
    <string name="select_start_time">请选择开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="select_end_time">请选择结束时间</string>
    <string name="query_result">查询结果</string>
    <string name="latest_cheng_zhong">最新称重记录</string>
    <string name="hint_search">输入票据编号、车号或货名等</string>
    <string name="bill">票据</string>
    <string name="search_bill_hint">请输入票据编号</string>
    <string name="car_no">车号</string>
    <string name="search_car_no_hint">请输入车辆号码</string>
    <string name="goods_name">货名</string>
    <string name="search_goods_name_hint">请输入货物名称</string>
    <string name="hint_search_camera">输入监控名称</string>
    <string name="search">搜索</string>
    <string name="monitor">监控</string>
    <string name="offline">离线</string>
    <string name="me">我的</string>
    <string name="modify_password">修改密码</string>
    <string name="about">关于</string>
    <string name="logout">退出登录</string>
    <string name="old_pwd">原密码：</string>
    <string name="new_pwd">新密码：</string>
    <string name="confirm_pwd">确认密码：</string>
    <string name="hint_old_pwd">请输入原密码：</string>
    <string name="hint_new_pwd">请输入新密码：</string>
    <string name="hint_confirm_pwd">请确认新密码：</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="check_update">检查更新</string>
    <string name="piao_ju_bian_hao">票据编号</string>
    <string name="che_liang_hao_ma">车辆号码：</string>
    <string name="che_liang_hao_ma_1">车辆号码</string>
    <string name="huo_wu_ming_cheng">货物名称</string>
    <string name="chu_ru_lei_xing">出入类型</string>
    <string name="sha_chang">沙场</string>
    <string name="search_sha_chang_hint">请输入沙场名称</string>
    <string name="mao_zhong">毛重：</string>
    <string name="mao_zhong_1">毛重</string>
    <string name="jin_e_colon">金额：</string>
    <string name="jin_e">金额</string>
    <string name="jin_e_wan">金额(万)</string>
    <string name="jing_zhong">净重：</string>
    <string name="jing_zhong_1">净重</string>
    <string name="shi_jian">时间</string>
    <string name="shi_jian_colon">时间：</string>
    <string name="weight">重量</string>
    <string name="weight_colon">重量：</string>
    <string name="weight_T">重量(T)</string>
    <string name="si_ji">司机</string>
    <string name="KG">kg</string>
    <string name="yuan">元</string>
    <string name="unit_t">T</string>
    <string name="unit_wan">万</string>
    <string name="unit_che">车</string>
    <string name="blank">&#160;</string>
    <string name="detail">详情</string>
    <string name="check_detail">查看详情</string>
    <string name="password_rule">新密码为6–16位数字和字母的组合</string>
    <string name="personal_info">个人信息</string>
    <string name="personal_data">个人资料</string>
    <string name="profile_picture">头像</string>
    <string name="real_name">姓名</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="connect">联系方式</string>
    <string name="phone_number">手机号</string>
    <string name="telephone_colon">联系电话：</string>
    <string name="address">地址</string>
    <string name="company_query">单位查询</string>
    <string name="company_query_hint">请输入单位名称</string>
    <string name="two_dimensional_code">二维码</string>
    <string name="my_app">我的应用</string>
    <string name="add_app">添加应用</string>

    <string name="select_condition">票据</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
