<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.fenjin.sandfactory.viewmodel.PasswordViewModel"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/app_color_background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:background="@color/app_color_main"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_alignParentBottom="true"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:drawableStart="@mipmap/ic_arrow_back"
                android:drawablePadding="10dp"
                android:text="@string/modify_password"
                android:onClick="@{() -> viewModel.finishActivity()}"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/old_pwd"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="107dp"
                android:layout_centerVertical="true"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="16sp"
                android:maxLength="16"
                android:hint="@string/hint_old_pwd"
                android:text="@={viewModel.oldPassword}"
                android:background="@null"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#ffffff"
            android:layout_marginTop="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/new_pwd"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="107dp"
                android:layout_centerVertical="true"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="16sp"
                android:maxLength="16"
                android:hint="@string/hint_new_pwd"
                android:text="@={viewModel.newPassword}"
                android:background="@null"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#ffffff"
            android:layout_marginTop="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:text="@string/confirm_pwd"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="107dp"
                android:layout_centerVertical="true"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="16sp"
                android:maxLength="16"
                android:hint="@string/hint_confirm_pwd"
                android:text="@={viewModel.confirmPassword}"
                android:background="@null"/>

        </RelativeLayout>
        
        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            style="@style/RoundButton"
            android:text="@string/confirm"
            app:changeAlphaWhenPress="@{true}"
            android:onClick="@{()->viewModel.submitPassword()}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/hint_color"
            android:text="@string/password_rule"/>

    </LinearLayout>

</layout>
