<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.PersonalInfoActivity">

    <data>

        <variable
            name="viewModel"
            type="com.fenjin.sandfactory.viewmodel.PersonalInfoViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:background="@color/app_color_main"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/personal_data" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:src="@mipmap/ic_arrow_back"
                android:onClick="@{() -> viewModel.finishActivity()}"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <!--个人信息-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/personal_info"
            android:gravity="center_vertical" />

        <!--头像-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/profile_picture" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                app:imageUrl="@{viewModel.profilePictureUrl}" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:src="@mipmap/ic_arrow" />

        </RelativeLayout>

        <!--姓名-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/real_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@{viewModel.name}" />
        </RelativeLayout>

        <!--性别-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/sex" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@{viewModel.sex}" />
        </RelativeLayout>

        <!--联系方式-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/connect"
            android:gravity="center_vertical" />

        <!--手机号-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:onClick="@{() -> viewModel.showModifyPhoneNumberDialog()}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/phone_number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@{viewModel.phoneNumber}" />
        </RelativeLayout>

        <!--我的地址-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:onClick="@{() -> viewModel.showModifyAddressDialog()}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/address" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@{viewModel.address}" />
        </RelativeLayout>

        <!--公司-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:onClick="@{() -> viewModel.showModifyCompanyDialog()}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/company" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@{viewModel.company}" />
        </RelativeLayout>

        <!--二维码-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/two_dimensional_code"
            android:gravity="center_vertical" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:imageUrl="@{viewModel.twoDimensionalCodeUrl}" />


    </LinearLayout>

</layout>