<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.fenjin.sandfactory.viewmodel.StatisticsViewModel" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragment.StatisticsFragment"
        android:background="@color/app_color_background">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:background="@color/app_color_main">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:text="@string/statistics"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/statistics_query"
            android:textSize="14sp"
            android:textColor="#9D9E9E" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/tv_site_statistics"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/common_cilck_item_bg"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:text="@string/site_statistics"
                android:drawableTop="@mipmap/ic_sand_factory_statistics"
                android:paddingTop="15dp"
                android:drawablePadding="4dp"
                android:onClick="@{viewModel::onClick}" />

            <TextView
                android:id="@+id/tv_company_statistics"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/common_cilck_item_bg"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:text="@string/company_statistics"
                android:drawableTop="@mipmap/ic_company_statistics"
                android:paddingTop="15dp"
                android:drawablePadding="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:onClick="@{viewModel::onClick}" />

            <TextView
                android:id="@+id/tv_balance_query"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/common_cilck_item_bg"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:text="@string/balance_query"
                android:drawableTop="@mipmap/ic_balance_query"
                android:paddingTop="15dp"
                android:drawablePadding="4dp"
                android:onClick="@{viewModel::onClick}" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/cheng_zhong_statistics"
            android:textSize="14sp"
            android:textColor="#9D9E9E" />

        <GridView
            android:id="@+id/grid_view"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            android:numColumns="3"
            android:stretchMode="columnWidth"
            android:horizontalSpacing="10dp"
            android:padding="10dp"
            android:adapter="@{viewModel.adapter}">

        </GridView>

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:tabIndicatorHeight="0dp"
            app:tabBackground="@drawable/bg_tab_item"
            app:tabTextColor="@color/tab_text_color"
            app:tabSelectedTextColor="@color/tab_text_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:text="@string/year_trends"
            android:textSize="14sp"
            android:textColor="#9D9E9E" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:id="@+id/layout_chart_legend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true"
                android:gravity="center_vertical"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:background="@color/blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:textColor="#9d9e9e"
                    android:text="@string/weight"
                    android:layout_marginStart="4dp" />

                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:background="@color/orange"
                    android:layout_marginStart="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:textColor="#9d9e9e"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="6dp"
                    android:text="@string/jin_e" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/layout_chart_unit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_below="@+id/layout_chart_legend"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:textColor="#9d9e9e"
                    android:text="@string/weight_T"
                    android:layout_marginStart="6dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:textColor="#9d9e9e"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="6dp"
                    android:text="@string/jin_e_wan" />

            </RelativeLayout>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/bar_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/layout_chart_unit">

            </com.github.mikephil.charting.charts.BarChart>

        </RelativeLayout>


        <com.qmuiteam.qmui.widget.pullRefreshLayout.QMUIPullRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout_pull_refresh"
            android:visibility="gone">


        </com.qmuiteam.qmui.widget.pullRefreshLayout.QMUIPullRefreshLayout>



    </LinearLayout>
</layout>
